RESOLVED FIXED127173
[GTK] WebKitGtk/testcopyandpaste fails in debug builds
https://bugs.webkit.org/show_bug.cgi?id=127173
Summary [GTK] WebKitGtk/testcopyandpaste fails in debug builds
Alberto Garcia
Reported 2014-01-17 06:24:59 PST
The PasteGlobalSelection CommandEntry appears twice in createCommandMap, which breaks the assertion some lines below. ASSERTION FAILED: !commandMap.get(commands[i].name) Looks like it was added by mistake in r161638 http://trac.webkit.org/changeset/161638/trunk/Source/WebCore/editing/EditorCommand.cpp
Attachments
Patch (1.38 KB, patch)
2014-01-17 06:26 PST, Alberto Garcia
cgarcia: review+
Alberto Garcia
Comment 1 2014-01-17 06:26:27 PST
Alberto Garcia
Comment 2 2014-01-17 06:33:44 PST
Note You need to log in before you can comment on or make changes to this bug.