[GTK] WebKitGtk/testcopyandpaste fails in debug builds https://bugs.webkit.org/show_bug.cgi?id=127173

Reviewed by Carlos Garcia Campos.

Remove duplicate "PasteGlobalSelection" entry.

* editing/EditorCommand.cpp:
(WebCore::createCommandMap):

Canonical link: https://commits.webkit.org/145167@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162201 268f45cc-cd09-0410-ab3c-d52691b4dbfc